--- a/charts/jobset/tests/prometheus/service_test.yaml
+++ b/charts/jobset/tests/prometheus/service_test.yaml
@@ -24,6 +24,11 @@ release:
   namespace: jobset-system
 
 tests:
+  - it: Should not create Prometheus metrics service by default
+    asserts:
+      - hasDocuments:
+          count: 0
+
   - it: Should create Prometheus Service if `prometheus.enable` is `true`
     set:
       prometheus:
