--- a/charts/jobset/crds/jobset.x-k8s.io_jobsets.yaml
+++ b/charts/jobset/crds/jobset.x-k8s.io_jobsets.yaml
@@ -94,7 +94,11 @@ spec:
                   maxRestarts:
                     description: |-
                       maxRestarts defines the limit on the number of JobSet restarts.
-                      A restart is achieved by recreating all active child jobs.
+                      If the restart strategy "InPlaceRestart" is used, this field
+                      also defines the limit on the number of container restarts of
+                      any child container. This is required to handle the edge case
+                      in which a container keeps failing too fast to complete a JobSet
+                      restart.
                     format: int32
                     type: integer
                   restartStrategy:
@@ -105,6 +109,7 @@ spec:
                     enum:
                     - Recreate
                     - BlockingRecreate
+                    - InPlaceRestart
                     type: string
                   rules:
                     description: |-
@@ -10086,8 +10091,27 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
+              currentInPlaceRestartAttempt:
+                description: |-
+                  currentInPlaceRestartAttempt tracks the current in-place restart attempt
+                  of the JobSet. It is read by the agent. If the in-place restart
+                  attempt of the Pod is equal to currentInPlaceRestartAttempt, the agent
+                  should lift its barrier to allow the worker container to
+                  start running.
+                format: int32
+                minimum: 0
+                type: integer
+              previousInPlaceRestartAttempt:
+                description: |-
+                  previousInPlaceRestartAttempt tracks the previous in-place restart attempt
+                  of the JobSet. It is read by the agent. If the in-place restart
+                  attempt of the Pod is smaller than or equal to previousInPlaceRestartAttempt,
+                  the agent should restart its Pod in-place.
+                format: int32
+                minimum: 0
+                type: integer
               replicatedJobsStatus:
-                description: replicatedJobsStatus track the number of JobsReady for
+                description: replicatedJobsStatus tracks the number of JobsReady for
                   each replicatedJob.
                 items:
                   description: ReplicatedJobStatus defines the observed ReplicatedJobs
@@ -10148,7 +10172,7 @@ spec:
                 type: integer
               terminalState:
                 description: |-
-                  terminalState the state of the JobSet when it finishes execution.
+                  terminalState tracks the state of the JobSet when it finishes execution.
                   It can be either Completed or Failed. Otherwise, it is empty by default.
                 type: string
             type: object
