--- a/site/static/examples/in-place-restart/jobset-big-container-mode.yaml
+++ b/site/static/examples/in-place-restart/jobset-big-container-mode.yaml
@@ -11,19 +11,19 @@ spec:
     maxRestarts: 3
     restartStrategy: InPlaceRestart
   replicatedJobs:
-  # This example uses 5k Pods in total
+  # This example uses 4 Pods in total
   - name: rj
-    replicas: 10
+    replicas: 2
     template:
       spec:
-        completions: 500
-        parallelism: 500
+        completions: 2
+        parallelism: 2
         backoffLimit: 2147483647
         podReplacementPolicy: Failed
         template:
           spec:
+            # See examples/in-place-restart/service-account-example.yaml
             serviceAccountName: jobset-in-place-restart
-            restartPolicy: OnFailure
             # Not necessary, but useful for testing
             terminationGracePeriodSeconds: 0
             containers:
@@ -38,12 +38,15 @@ spec:
                 valueFrom:
                   fieldRef:
                     fieldPath: metadata.name
-              - name: POD_NAMESPACE
-                valueFrom:
-                  fieldRef:
-                    fieldPath: metadata.namespace
-              - name: IN_PLACE_RESTART_EXIT_CODE
-                value: "1"
               # Worker command that exits with the exit code of the file /tmp/exit[0-9]* when it is created
               - name: WORKER_COMMAND
-                value: "echo \"Start\"; while sleep 1; do set -- /tmp/exit[0-9]*; [ -f \"\$1\" ] && { n=\${1##*exit}; echo \"exiting \$n\"; exit \"\$n\"; }; done"
+                value: |
+                  echo "Start"
+                  while sleep 1; do
+                    set -- /tmp/exit[0-9]*
+                    [ -f "$1" ] && {
+                      n=${1##*exit}
+                      echo "exiting $n"
+                      exit "$n"
+                    }
+                  done
